--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,32 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      List Slides
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+ 
+  <ion-list>
+    <ion-item-sliding *ngFor = "let listItem of list ; let i = index">
+      <ion-item>
+        <h2>{{ listItem }}</h2>
+      </ion-item>
+      <ion-item-options side="right">
+        <button ion-button color="primary" (click) = "delete(i)">
+          <ion-icon name="trash"></ion-icon>
+          delete
+        </button>
+
+        //<button ion-button color="primary" (click) = "update(i)">
+         // <ion-icon name="trrr"></ion-icon>
+         // update
+       // </button>
+
+      </ion-item-options>
+    </ion-item-sliding>
+  </ion-list>
+
+
 </ion-content>
